Por fin terminada y lista para la DEFENSA

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,4 +24,6 @@
     <string name="ModificarBD">Modificar</string>
     <string name="BorrarBD" >Borrar</string>
     <string name="InsertarBD">Insertar</string>
+    <string name="ParrilaCanal">"Obteniendo la parrilla Televisiva del Canal... "</string>
+    <string name="CanalesCanal">"Programacion del canal "</string>
 </resources>
